[project]
name = "sotopia"
version = "0.1.5"
description = "A platform for simulating and evaluating social interaction."
authors = [
    { name = "Xuhui Zhou", email = "xuhuiz@cs.cmu.edu" },
    { name = "Hao Zhu", email = "prokilchu@gmail.com" }
]
requires-python = ">=3.10, <3.13"
license = { text = "MIT License" }
readme = "README.md"

dependencies = [
    "lxml>=4.9.3,<6.0.0",
    "openai>=1.11.0,<3.0.0",
    "rich>=13.6.0,<15.0.0",
    "PettingZoo==1.25.0",
    "redis-om>=0.3.0,<0.4.0",
    "gin-config>=0.5.0,<0.6.0",
    "json-repair>=0.35.0,<0.55.0",
    "absl-py>=2.0.0,<3.0.0",
    "together>=0.2.4,<1.6.0",
    "pydantic>=2.5.0,<3.0.0",
    "hiredis>=3.0.0",
    "litellm>=1.80.11",
    "aact"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
anthropic = ["anthropic"]
groq = ["groq"]
cohere = ["cohere"]
google-generativeai = ["google-generativeai"]
examples = ["transformers", "datasets", "scipy", "torch", "pandas"]
api = [
    "fastapi[standard]",
    "uvicorn",
    "streamlit",
    "modal"
]
test = ["pytest", "pytest-cov", "pytest-asyncio"]
realtime = [
    "websockets>=13.1,<14.0",
    "pyaudio>=0.2.14,<0.3.0",
]

[dependency-groups]
dev = [
    "pre-commit",
    "nbmake",
    "types-setuptools",
    "types-requests",
    "types-tqdm",
    "types-protobuf==4.24.0.4",
    "types-pyaudio",
    "lxml-stubs",
    "pandas-stubs",
    "ruff",
    "mypy",
]

[tool.mypy]
mypy_path = "stubs"
strict = true
exclude = [
    "^ui/",
    "^examples/experimental/"
]
plugins = [
    "pydantic.mypy",
    "pydantic.v1.mypy"
]

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true

[tool.uv.sources]
aact = { git = "https://github.com/ProKil/aact" , branch = "main" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "real_llm: marks tests as requiring real LLM API calls (deselect with '-m \"not real_llm\"')",
    "slow: marks tests as slow running (deselect with '-m \"not slow\"')",
]

[project.scripts]
sotopia = "sotopia.cli:app"
