[metadata]
name = sotopia

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[options.extras_require]
dev =
    pre-commit==3.0.1
    pytest==7.1.2
    mypy==1.2.0
    beartype==0.12.0
    nbmake
    types-setuptools

[options]
python_requires = >=3.7, <4
packages =
    sotopia

[mypy]
mypy_path = stubs
strict = true
plugins = pydantic.mypy

[mypy-redis_om.*]
ignore_missing_imports = True
