[metadata]
name = sotopia

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[options.extras_require]
dev =
    pre-commit==3.0.1
    pytest==7.1.2
    mypy==1.2.0
    beartype==0.14.0
    nbmake
    types-setuptools
    pytest-asyncio

[options]
python_requires = >=3.7, <4
packages =
    sotopia
    lmlib
    sotopia_conf

[mypy]
mypy_path = stubs
strict = true
plugins = pydantic.mypy

[mypy-transformers.*]
ignore_missing_imports = True
